--- a/ScollPanelEx/src/scollPanelEx/client/tablestyles.css
+++ b/ScollPanelEx/src/scollPanelEx/client/tablestyles.css
@@ -1,10 +1,8 @@
-@def selectionBorderWidth 2px;
+@def selectionBorderWidth 1px;
 .cellTableWidget {
-    border: 1px solid #aaa;
 }
 
 .cellTableFirstColumn {
-
 }
 
 .cellTableLastColumn {
@@ -12,7 +10,7 @@
 }
 
 .cellTableFooter {
-    border-top: 2px solid #6f7277;
+    border-top: 1px solid #6f7277;
     padding: 1px 1px;
     text-align: left;
     color: #000000;
@@ -42,10 +40,12 @@
 
 .cellTableCell {
     font-size : 10px;
-    padding: 2px 15px;
+    text-align: left;
+    padding: 1px 1px;
     overflow: hidden;
     cursor: pointer;
     cursor: hand;
+    border: 2px solid #000000;
 }
 
 .cellTableFirstColumnFooter {
@@ -86,7 +86,7 @@
 }
 
 .cellTableEvenRowCell {
-    border: selectionBorderWidth solid #ffffff;
+    border: selectionBorderWidth solid #cccccc;
 }
 
 .cellTableOddRow {
@@ -96,7 +96,7 @@
 
 .cellTableOddRowCell {
     /*border: selectionBorderWidth solid #f3f7fb;*/
-    border: selectionBorderWidth solid #f0f0f0;
+    border: selectionBorderWidth solid #cccccc;
 }
 
 .cellTableHoveredRow {
@@ -104,7 +104,7 @@
 }
 
 .cellTableHoveredRowCell {
-    border: selectionBorderWidth solid #ffffaa;
+    border: selectionBorderWidth solid #cccccc;
 }
 
 .cellTableKeyboardSelectedRow {
@@ -112,25 +112,25 @@
 }
 
 .cellTableKeyboardSelectedRowCell {
-    border: selectionBorderWidth solid #ffffaa;
+    border: selectionBorderWidth solid #cccccc;
 }
 
 .cellTableSelectedRow {
     background: #ffffaa;
-    color: white;
+    color: #000000;
     height: auto;
     overflow: auto;
 }
 
 .cellTableSelectedRowCell {
-    border: selectionBorderWidth solid #ffffaa;
+    border: selectionBorderWidth solid #cccccc;
 }
 
 /**
  * The keyboard selected cell is visible over selection.
  */
 .cellTableKeyboardSelectedCell {
-    border: selectionBorderWidth solid #ffffaa;
+    border: selectionBorderWidth solid #cccccc;
 }
 
 .cellTableLoading {
