--- a/ScollPanelEx/war/ScollPanelEx.css
+++ b/ScollPanelEx/war/ScollPanelEx.css
@@ -11,3 +11,24 @@ body, td, a, div, .p {
 }
 
 
+/*.gald-wold {*/
+    /*border: none;*/
+/*}*/
+
+/*.gald-wojd {*/
+    /*border: none;*/
+/*}*/
+
+.custom-grid {
+    border-bottom: 1px solid #cccccc;
+    border-left: 1px solid #cccccc;
+    border-right: 1px solid #cccccc;
+}
+
+.custom-grid-message {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    color: #000000;
+    text-align: center;
+}
