--- a/ScollPanelEx/war/ScollPanelEx.css
+++ b/ScollPanelEx/war/ScollPanelEx.css
@@ -32,3 +32,41 @@ body, td, a, div, .p {
     color: #000000;
     text-align: center;
 }
+
+.custom-grid-header {
+    width : 735px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: normal;
+    color: #000000;
+    text-align: center;
+    background-color: #f0f0f0;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    border-right: 1px solid #cccccc;
+}
+
+.custom-grid-lbl {
+    text-align: center;
+    border-left: 1px solid #cccccc;
+    cursor: pointer;
+    cursor: hand;
+}
+
+.custom-grid-lbl-asc {
+    text-align: center;
+    border-left: 1px solid #cccccc;
+    cursor: pointer;
+    cursor: hand;
+    background: url("/images/scrollTableAscending.gif") no-repeat scroll right center transparent;
+    /*padding-right: 7px;*/
+}
+
+.custom-grid-lbl-desc {
+    text-align: center;
+    border-left: 1px solid #cccccc;
+    cursor: pointer;
+    cursor: hand;
+    background: url("/images/scrollTableDescending.gif") no-repeat right center transparent;
+    /*padding-right: 7px;*/
+}
